[tool.poetry]
name = "repl_python3_Project-management-bot"
version = "0.1.0"
description = ""
authors = ["GabrielAlmeid26 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
tabulate = "^0.8.9"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
